--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <div class="row text"align="center">
             <h1>HOW TO JOIN EVENTS</h1>
-            <a class="btn" href="https://sentry.io/answers/">Join Modular Monday VRChat Group</a>
+            <a class="btn" href="https://vrchat.com/home/group/grp_d611ff18-0a6e-4c60-9f4f-c51e82b80570">Join Modular Monday VRChat Group</a>
             <p>The events start on Monday at 7CST, however the doors are usually opened 15-30 minutes prior to the event to allow people to setup. There will be a message posted in our discord, in ⁠chat, as well as an announcement made in the VRChat group (you should get a notification on the website and in VRChat).</p>
             <p>Once you receive the notification of the world being opened, launch VRchat (if not already). If you are not in VR you should receive a notice asking which version of VRChat to launch. Launch the client in 'non-vr' mode.</p>
             <p>Once you are in VRChat, press escape to bring up your menu, and select the 'social' button.</p>
