--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         </div>
         <div class="row text"align="center">
             <h1>ABOUT</h1>
-            <p>Modular Monday is a collective, or community of musicians, enthusiasts and hardware geeks who enjoy electronic music as well as live performances.</p>
-            <p>In the spirit of this, our staff facilitate, on a weekly basis, a poster as well as a map selection. We will send out any streaming information if a VJ is planning on performing. We do the bare minimum of admin work to just keep the gears turning each week.</p>
+            <p>Modular Monday is a collective, or community of musicians, enthusiasts and hardware geeks who enjoy music creation.</p>
+            <p>The idea is for people to come together and create music live in a fun environment, feel free to experiment and express themselves.</p>
         </div>
         <div class="row text"align="center">
             <h1>HOW TO JOIN EVENTS</h1>
-            <a class="btn" href="https://vrchat.com/home/group/grp_d611ff18-0a6e-4c60-9f4f-c51e82b80570">Join Modular Monday VRChat Group</a>
-            <p>The events start on Monday at 7CST, however the doors are usually opened 15-30 minutes prior to the event to allow people to setup. There will be a message posted in our discord, in ⁠chat, as well as an announcement made in the VRChat group (you should get a notification on the website and in VRChat).</p>
+            <a class="btn" href="https://vrchat.com/home/group/grp_d611ff18-0a6e-4c60-9f4f-c51e82b80570">Join the Modular Monday VRChat Group</a>
+            <p>The events start on Monday at 7CST, however the doors are usually opened 15-30 minutes prior to the event to allow people to setup. There will be a message posted in our discord, in chat, as well as an announcement made in the VRChat group (you should get a notification on the website and in VRChat).</p>
             <p>Once you receive the notification of the world being opened, launch VRchat (if not already). If you are not in VR you should receive a notice asking which version of VRChat to launch. Launch the client in 'non-vr' mode.</p>
             <p>Once you are in VRChat, press escape to bring up your menu, and select the 'social' button.</p>
             <p>Under 'Group Locations' you should see a world instance for the group 'Modular Monday'. Select the instance and then select join. We change worlds regularly because we are silly people with short attention spans, so the instance location will be different each week.</p>
@@ -36,11 +36,11 @@
         </div>
         <div class="row text"align="center">
             <h1>HOW TO PERFORM</h1>
-            <p>Modular Monday has experienced a surge of interest from new performers, which is excellent news. We’ve run a pretty small operation for a while and have kept things pretty low-key in terms of organizing events and scheduling. We’d like to make it crystal clear to everyone who we are as a community, as well as how people can get in and perform at a Modular Monday event.</p>
+            <p>Modular Monday has experienced a surge of interest from new performers, which is excellent news. We've run a pretty small operation for a while and have kept things pretty low-key in terms of organizing events and scheduling. We'd like to make it crystal clear to everyone who we are as a community, as well as how people can get in and perform at a Modular Monday event.</p>
             <p>Performances are usually 30 minutes, but we are okay if someone would like to showcase a new patch or song at the end of the night that might not fit a full time slot. </p>
-            <p>That being said, our decision making is usually done collectively, as a group. If someone would like to showcase a new map, or needs to be on the flier at an earlier time slot, we try to accommodate. We love our community and the performers who make every Monday special. We are open to ANYONE performing as long as it's not pre-recorded music (DJ’s we still love you).</p>
-            <p>That being said, to ensure that performers understand the esprit-de-corp, we ask that any performers interested in throwing down attend at least one Modular Monday event. At the end of each night we will have an open mic/table for anyone that is in attendance. If for some reason you aren’t able to stay until the open mic, just talk to anyone on staff and we can schedule you for the following week and ensure you are on the flier for an earlier time slot.</p>
-            <p>Thank you all for being such a great community, we’ll see you on Monday!</p>
+            <p>That being said, our decision making is usually done collectively, as a group. If someone would like to showcase a new map, or needs to be on the flier at an earlier time slot, we try to accommodate. We love our community and the performers who make every Monday special. We are open to ANYONE performing as long as it's not pre-recorded music (DJs we still love you).</p>
+            <p>That being said, to ensure that performers understand the esprit-de-corp, we ask that any performers interested in throwing down attend at least one Modular Monday event. At the end of each night we will have an open mic/table for anyone that is in attendance. If for some reason you aren't able to stay until the open mic, just talk to anyone on staff and we can schedule you for the following week and ensure you are on the flier for an earlier time slot.</p>
+            <p>Thank you all for being such a great community, we'll see you on Monday!</p>
         </div>
         <footer>
             <div></div>
