--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
     </head>
     <body>
         <div>
-            <img src="images\MM_Logo_TransP_CROPPED.png" alt="Modular Monday Logo">
+            <img align="center" src="images\MM_Logo_TransP_CROPPED.png" alt="Modular Monday Logo">
         </div>
-        <p1>"One of the hottest events in VR"</p1>
         <div class="row social" align="center">
             <a target = "blank" href = 'https://www.twitch.tv/modularmonday'><i class="fab fa-twitch"></i></a>
             <a target = "blank" href = 'https://www.youtube.com/@ModularMonday/streams'><i class="fab fa-youtube"></i></a>
@@ -21,29 +20,25 @@
         </div>
         <div class="row text"align="center">
             <h1>ABOUT</h1>
-            <p>Modular Monday is a collective, or community of musicians, enthusiasts and hardware geeks who enjoy music creation.</p>
-            <p>The idea is for people to come together and create music live in a fun environment, feel free to experiment and express themselves.</p>
+            <p>Modular Monday is an event hosted in VRChat every Monday at 7:00pm CST where people create music live with Euro rack, hardware, software and other instruments.</p>
         </div>
         <div class="row text"align="center">
             <h1>HOW TO JOIN EVENTS</h1>
             <a class="btn" href="https://vrchat.com/home/group/grp_d611ff18-0a6e-4c60-9f4f-c51e82b80570">Modular Monday VRChat Group</a>
-            <p>The events start on Monday at 7CST, however the doors are usually opened 15-30 minutes prior to the event to allow people to setup. There will be a message posted in our discord, in chat, as well as an announcement made in the VRChat group (you should get a notification on the website and in VRChat).</p>
-            <p>Once you receive the notification of the world being opened, launch VRchat (if not already). If you are not in VR you should receive a notice asking which version of VRChat to launch. Launch the client in 'non-vr' mode.</p>
-            <p>Once you are in VRChat, press escape to bring up your menu, and select the 'social' button.</p>
-            <p>Under 'Group Locations' you should see a world instance for the group 'Modular Monday'. Select the instance and then select join. We change worlds regularly because we are silly people with short attention spans, so the instance location will be different each week.</p>
-            <p>You're in! If you have a microphone you can press 'V' to unmute/mute toggle. If you do not have a microphone you can type by pressing 'Y'.</p>
-            <p>If you have any issues you can add one of the moderators of this discord, or a performer that is on the poster as a VRChat friend and join off of them in your social tab.</p>
+            <p>Join our VRChat Group by clicking the button above. If you don't already have a VRC account, create one then join the group. When an event starts a notification in-game will pop up!</p>
+            <p>Be sure to click the Discord icon at the top of this page to join our Discord server, especially if you need help or have any questions! We have a great community that loves to help</p>
         </div>
         <div class="row text"align="center">
             <h1>HOW TO PERFORM</h1>
-            <p>Modular Monday has experienced a surge of interest from new performers, which is excellent news. We've run a pretty small operation for a while and have kept things pretty low-key in terms of organizing events and scheduling. We'd like to make it crystal clear to everyone who we are as a community, as well as how people can get in and perform at a Modular Monday event.</p>
-            <p>Performances are usually 30 minutes, but we are okay if someone would like to showcase a new patch or song at the end of the night that might not fit a full time slot. </p>
-            <p>That being said, our decision making is usually done collectively, as a group. If someone would like to showcase a new map, or needs to be on the flier at an earlier time slot, we try to accommodate. We love our community and the performers who make every Monday special. We are open to ANYONE performing as long as it's not pre-recorded music (DJs we still love you).</p>
-            <p>That being said, to ensure that performers understand the esprit-de-corp, we ask that any performers interested in throwing down attend at least one Modular Monday event. At the end of each night we will have an open mic/table for anyone that is in attendance. If for some reason you aren't able to stay until the open mic, just talk to anyone on staff and we can schedule you for the following week and ensure you are on the flier for an earlier time slot.</p>
-            <p>Thank you all for being such a great community, we'll see you on Monday!</p>
+            <ul>
+                <li>Join the VRC group</li>
+                <li>Join the Discord</li>
+                <li>Come out to an event to hang and see how it all works!</li>
+            </ul>
+            <p>There is an opentable at the end for newcomers to perform. More info can be found in our Discord.</p>
         </div>
         <footer>
             <div></div>
-        </footer> 
+        </footer>
     </body>
 </html>
