Hyperlinks and img scaling

--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
         <div class="row text"align="center">
             <h1>HOW TO JOIN EVENTS</h1>
             <a class="btn" href="https://vrchat.com/home/group/grp_d611ff18-0a6e-4c60-9f4f-c51e82b80570">Modular Monday VRChat Group</a>
-            <p>Join our VRChat Group by clicking the button above. If you don't already have a VRC account, create one then join the group. When an event starts a notification in-game will pop up!</p>
-            <p>Be sure to click the Discord icon at the top of this page to join our Discord server, especially if you need help or have any questions! We have a great community that loves to help</p>
+            <p>Join our VRChat Group by clicking the button above. If you don't already have a VRC account, create one then join the group. When an event starts, a notification in-game will pop up!</p>
+            <p>Be sure to click the <a href="https://discordapp.com/invite/xCsa3zGyrt">Discord</a> icon at the top of this page to join our Discord server, especially if you need help or have any questions! We have a great community that loves to help.</p>
         </div>
         <div class="row text"align="center">
             <h1>HOW TO PERFORM</h1>
             <ul>
-                <li>Join the VRC group</li>
-                <li>Join the Discord</li>
-                <li>Come out to an event to hang and see how it all works!</li>
+                <li>Join the <a href="https://vrchat.com/home/group/grp_d611ff18-0a6e-4c60-9f4f-c51e82b80570">VRC Group</a></li>
+                <li>Join the <a href="https://discordapp.com/invite/xCsa3zGyrt">Discord</a></li>
+                <li>Attend an event to hang out with us and see how it all works!</li>
             </ul>
-            <p>There is an opentable at the end for newcomers to perform. More info can be found in our Discord.</p>
+            <p>There is an open table at the end of the event for newcomers to perform. More info can be found in our <a href="https://discordapp.com/invite/xCsa3zGyrt">Discord</a>.</p>
         </div>
         <footer>
             <div></div>
