favicon and QRCode

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+        <link rel = "icon" type="image/x-icon" href = "images\favicon.ico">
     </head>
     <body>
         <div>
@@ -37,8 +38,11 @@
             </ul>
             <p>There is an open table at the end of the event for newcomers to perform. More info can be found in our <a href="https://discordapp.com/invite/xCsa3zGyrt">Discord</a>.</p>
         </div>
+        <div>
+            <img class="QRCode" align="center" src="images\MM Landing Page.png" alt="Modular Monday QR Code">
+            <p3 class="QRText">Share this Page!</p3>
+        </div>
         <footer>
-            <div></div>
         </footer>
     </body>
 </html>
